# pyrays

./: .gitignore  .gitlab-ci.yml  .gitmodules  Cargo.toml  LICENSE  LICENSE.txt  MANIFEST.in  README.md  clean.sh  coverage.sh  coverage_calc.py  dev.sh  example.py  install.sh  pyproject.toml  setup.py  test.sh
examples/example_proc1/: proc1.py
examples/example_proc2/: proc2.py
examples/test_scene/: example.py
pyrays/: __init__.py  __main__.py  material.py  rayobject.py  scene.py  util.py
raspy/: __init__.py  __main__.py  test.py
rays/: Cargo.toml
rays/src/: lib.rs
scripts/: clean.sh  coverage.sh  dev.sh
src/: lib.rs
src/pyrays/: __init__.py  __main__.py  material.py  rayobject.py  scene.py  util.py
src/raytrace-rs/: .gitignore  Cargo.toml
src/raytrace-rs/src/: aabb.rs  bin.rs  camera.rs  colour_map.rs  configuration.rs  hittable.rs  hittables.rs  lib.rs  material.rs  noise.rs  octree.rs  ray.rs  sphere.rs  terrain.rs  triangle.rs  vec3.rs
tests/: test_material.py  test_pyrays_rs.py  test_raspy_rs.py  test_rayobjects.py  test_scene.py
tests/cov/: coverage_calc.py
tests/test_scenes/test_sphere/: test_sphere_multi.py  test_sphere_single.py
tests/test_scenes/test_triangle/: test_triangle_culled_multi.py  test_triangle_culled_single.py  test_triangle_multi.py  test_triangle_single.py
