cargo-features = ["profile-rustflags"]

[package]
name = "pyrays"
version = "0.1.0"
edition = "2021"

[lib]
name = "pyrays_rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "*", features = ["extension-module"] }
raytrace-rs = { path = "src/raytrace-rs" }

[profile.release]
opt-level = 3
rustflags = ["-C", "target-cpu=native"]
