cargo-features = ["profile-rustflags"]

[package]
name = "raytrace-rs"
description = """Raytracing in one weekend in rust.
Expanded upon to include triangles and procedurally generated terrain."""
readme = "README.md"
repository = "https://github.com/KianShepherd/raytracing"
license = "MIT OR Apache-2.0"
publish = false
version = "0.1.0"
authors = ["Kian Shepherd <Kianshepherd73@gmail.com>"]
edition = "2018"

[dependencies]
rand = "*"
num_cpus = "1.6"
serde = "*"
ron  = "*"
rayon = "1.7"
indicatif="0.17.3"
stacker = "0.1.15"
glam = { version = "*", features = ["fast-math", "core-simd"] }


[target.aarch64-apple-darwin]
rustc-flags = ["-C", "target-feature=+neon,+sve,+sve2,+dotprod,+rand,+v8.5a"]

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
rustflags = ["-C", "target-cpu=native"]

[lib]
name = "raytrace_rs"
path = "src/lib.rs"
