cargo-features = ["profile-rustflags"]

[package]
name = "raytrace-rs"
description = """Raytracing in one weekend in rust.
Expanded upon to include triangles and procedurally generated terrain."""
readme = "README.md"
repository = "https://github.com/KianShepherd/raytracing"
license = "MIT OR Apache-2.0"
publish = false
version = "0.1.0"
authors = ["Kian Shepherd <Kianshepherd73@gmail.com>"]
edition = "2018"

[dependencies]
rand = "*"
num_cpus = "1.6"
serde = { version = "*", features = ["derive"] }
ron  = "*"
rayon = "1.7"
indicatif="0.17.3"
stacker = "0.1.15"
glam = { git = "https://github.com/bitshifter/glam-rs.git", features = ["fast-math", "core-simd"] }


[target.aarch64-apple-darwin]
rustc-flags = ["-C", "target-feature=+neon,+sve,+sve2,+dotprod,+rand,+v8.5a"]

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
rustflags = ["-C", "target-cpu=native", "-C", "target-feature=+adx,+aes,+avx,+avx2,+avx512bf16,+avx512bitalg,+avx512bw,+avx512cd,+avx512dq,+avx512er,+avx512f,+avx512ifma,+avx512pf,+avx512vbmi,+avx512vbmi2,+avx512vl,+avx512vnni,+avx512vp2intersect,+avx512vpopcntdq,+sse,+sse2,+sse3,+ssse3"]

[lib]
name = "raytrace_rs"
path = "src/lib.rs"
